; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_emit_lexeme.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_emit_lexeme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexer = type { i32, i32, i32 }
%struct.lexeme = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lexer*, %struct.lexeme*)* @emit_lexeme to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_lexeme(%struct.lexer* %0, %struct.lexeme* %1) #0 {
  %3 = alloca %struct.lexer*, align 8
  %4 = alloca %struct.lexeme*, align 8
  store %struct.lexer* %0, %struct.lexer** %3, align 8
  store %struct.lexeme* %1, %struct.lexeme** %4, align 8
  %5 = load %struct.lexer*, %struct.lexer** %3, align 8
  %6 = getelementptr inbounds %struct.lexer, %struct.lexer* %5, i32 0, i32 2
  %7 = load %struct.lexeme*, %struct.lexeme** %4, align 8
  %8 = call i32 @lexeme_ring_buffer_put(i32* %6, %struct.lexeme* %7)
  %9 = load %struct.lexer*, %struct.lexer** %3, align 8
  %10 = getelementptr inbounds %struct.lexer, %struct.lexer* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.lexer*, %struct.lexer** %3, align 8
  %13 = getelementptr inbounds %struct.lexer, %struct.lexer* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  ret void
}

declare dso_local i32 @lexeme_ring_buffer_put(i32*, %struct.lexeme*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
